setting overflow to none on speaker cards to avoid ghost scrollbar on big screens

--- a/src/components/CNJCx/CNJCx.css
+++ b/src/components/CNJCx/CNJCx.css
@@ -14,7 +14,7 @@
   margin: 5px;
   padding: 5px;
   height: 80px;
-  overflow: scroll;
+  overflow: none;
   color: black;
 }
 
